--- a/views/articleDesk.html
+++ b/views/articleDesk.html
@@ -62,7 +62,7 @@
                                     Дата {{ article.getCreatedAt() }} Название статьи: {{ article.getName() }}
                                 </a>
                                 <a href='?Delete={{ article.getId() }}' class='btn btn-danger btn-xs delete' data-delete='{{ article.getId() }}'><i class="fa fa-times fa-2x"></i></a>
-                                <a href='/EditArticle?Edit={{ article.getId() }}' class='btn btn-info btn-xs'><i class="fa fa-pencil-square-o fa-2x"></i></a>
+                                <a href='/EditArticle?articleId={{ article.getId() }}' class='btn btn-info btn-xs'><i class="fa fa-pencil-square-o fa-2x"></i></a>
                             </h4>
                         </div>
                         <div id="{{ article.getId() }}" class="panel-collapse collapse">
