--- a/views/articleDesk.html
+++ b/views/articleDesk.html
@@ -20,11 +20,11 @@
 
                     <div class="form-group col-md-8 {{ (errorAddArticle['CodeError'] == '1') ? 'has-error' }}">
                         <label for="exampleInputEmail1">Название статьи</label>
-                        <input type="text" class="form-control" placeholder="Название статьи" name="NewArticleName" value="{{ (errorAddArticle['CodeError'] != '0') ? errorAddArticle['Article'].getName() }}">
+                        <input type="text" class="form-control" placeholder="Название статьи" name="newArticleName" value="{{ (errorAddArticle['CodeError'] != '0') ? errorAddArticle['Article'].getName() }}">
                     </div>
                     <div class="form-group col-md-4 {{ (errorAddArticle['CodeError'] == '2') ? 'has-error' }}">
                         <label for="exampleInputPassword1">Автор статьи</label>
-                        <input type="text" class="form-control" placeholder="Автор статьи" value="{{ (errorAddArticle['CodeError'] != '0') ? errorAddArticle['Article'].getAuthor() : 'Перескоков Юрий' }}" name="NewArticleAuthor">
+                        <input type="text" class="form-control" placeholder="Автор статьи" value="{{ (errorAddArticle['CodeError'] != '0') ? errorAddArticle['Article'].getAuthor() : 'Перескоков Юрий' }}" name="newArticleAuthor">
                     </div>
 
                     <div class="form-group col-md-12" {{ (errorAddArticle['CodeError'] == '3') ? "style='outline: 1px solid #A90006'" }} >
@@ -35,16 +35,16 @@
                         {% endif %}
 
                         <label for="exampleInputFile">Хочу добавить картинку!</label>
-                        <input type="file" name="NewArticleImage[]" multiple="multiple">
+                        <input type="file" name="newArticleImage[]" multiple="multiple">
                     </div>
 
                     <div class="form-group col-md-12 {{ (errorAddArticle['CodeError'] == '4') ? 'has-error' }}">
                         <label for="exampleInputFile">Текст статьи: </label>
-                        <textarea id="NewArticle" class="form-control" rows="6" name="NewArticleText">{{ (errorAddArticle['CodeError'] != '0') ? errorAddArticle['Article'].getText() }}</textarea>
+                        <textarea id="newArticle" class="form-control" rows="6" name="NewArticleText">{{ (errorAddArticle['CodeError'] != '0') ? errorAddArticle['Article'].getText() }}</textarea>
                     </div>
 
                     <div class="form-group">
-                        <button id="ForSub" type="submit" class="btn btn-primary" name="Sub"><i class="fa fa-check"></i>Отправить</button>
+                        <button id="ForSub" type="submit" class="btn btn-primary" name="sub"><i class="fa fa-check"></i>Отправить</button>
                     </div>
                 </form>
             </div>
