--- a/views/articleDesk.html
+++ b/views/articleDesk.html
@@ -40,7 +40,7 @@
 
                     <div class="form-group col-md-12 {{ (errorAddArticle['CodeError'] == '4') ? 'has-error' }}">
                         <label for="exampleInputFile">Текст статьи: </label>
-                        <textarea id="newArticle" class="form-control" rows="6" name="newArticleText">{{ (errorAddArticle['CodeError'] != '0') ? errorAddArticle['Article'].getText() }}</textarea>
+                        <textarea id="newArticle" class="form-control" rows="6" name="newArticleText" style="resize: none">{{ (errorAddArticle['CodeError'] != '0') ? errorAddArticle['Article'].getText() }}</textarea>
                     </div>
 
                     <div class="form-group">
