--- a/views/articleDesk.html
+++ b/views/articleDesk.html
@@ -77,6 +77,8 @@
                     <h1>В данный момент в блоге нет статей!</h1>
                 {% endfor %}
             </div>
+            <a href='/article' class='btn btn-primary btn-xs'><i class="fa fa-plus fa-2x"></i> Добавить статью</a>
+            <br />
         </div>
     </div>
 </div>
