--- a/views/article.html
+++ b/views/article.html
@@ -10,7 +10,7 @@
         <div class="col-md-12">
             <div id="New-post">
                 <h3>Работа со статьей</h3>
-                <form role="form" method="post" action="" enctype="multipart/form-data">
+                <form role="form" method="post" action="" enctype="multipart/form-data" class="js-form">
                     {% if errorAddArticle['CodeError'] != 0 %}
                     <div class="form-group alert-danger col-md-12">
                         <h4>{{ errorAddArticle['TextError'] }}</h4>
@@ -23,7 +23,7 @@
                     </div>
                     <div class="form-group col-md-4 {{ (errorAddArticle['CodeError'] == '2') ? 'has-error' }}">
                         <label>Автор статьи</label>
-                        <input type="text" class="form-control" placeholder="Автор статьи" name="author">
+                        <input type="text" class="form-control" placeholder="Автор статьи" name="author" value="Перескоков Юрий">
                     </div>
 
                     <div class="form-group col-md-12" {{ (errorAddArticle['CodeError'] == '3') ? "style='outline: 1px solid #A90006'" }} >
