--- a/views/articleDesk.html
+++ b/views/articleDesk.html
@@ -34,7 +34,7 @@
                     <h1>В данный момент в блоге нет статей!</h1>
                 {% endfor %}
                 <br />
-                <a href='/article/0' class='btn btn-primary btn-xs addArticle'><i class="fa fa-plus fa-2x"></i> Добавить статью</a>
+                <a href='/article' class='btn btn-primary btn-xs addArticle'><i class="fa fa-plus fa-2x"></i> Добавить статью</a>
                 <br />
             </div>
         </div>
