--- a/views/article.html
+++ b/views/article.html
@@ -10,7 +10,10 @@
         <div class="col-md-12">
             <div id="New-post">
                 <h3>Работа со статьей</h3>
-                <form role="form" method="post" action="" enctype="multipart/form-data" class="js-form">
+                <form role="form" method="post" action="/addArticle" enctype="multipart/form-data" class="js-form">
+
+
+
                     {% if errorAddArticle['CodeError'] != 0 %}
                     <div class="form-group alert-danger col-md-12">
                         <h4>{{ errorAddArticle['TextError'] }}</h4>
@@ -39,7 +42,7 @@
 
                 <div class="form-group col-md-12 {{ (errorAddArticle['CodeError'] == '4') ? 'has-error' }}">
                     <label>Текст статьи: </label>
-                    <textarea id="newArticle" class="form-control" rows="6" name="newArticleText" style="resize: none"></textarea>
+                    <textarea id="newArticle" class="form-control" rows="6" name="text" style="resize: none"></textarea>
                 </div>
 
                 <div class="form-group">
