--- a/views/layout.html
+++ b/views/layout.html
@@ -33,6 +33,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="/js/bootstrap.js"></script>
-<script src="/js/ajax.js"></script>
+<script src="/js/addAndEditArticleAjax.js"></script>
 </body>
 </html>
