--- a/views/article.html
+++ b/views/article.html
@@ -10,46 +10,36 @@
         <div class="col-md-12">
             <div id="New-post">
                 <h3>Работа со статьей</h3>
+
+                <div class="js-alert">
+
+                </div>
+
                 <form role="form" method="post" action="/addArticle" enctype="multipart/form-data" class="js-form">
-
-
-
-                    {% if errorAddArticle['CodeError'] != 0 %}
-                    <div class="form-group alert-danger col-md-12">
-                        <h4>{{ errorAddArticle['TextError'] }}</h4>
-                    </div>
-                    {% endif %}
-
-                    <div class="form-group col-md-8 {{ (errorAddArticle['CodeError'] == '1') ? 'has-error' }}">
+                    <div class="form-group col-md-8 js-name">
                         <label>Название статьи</label>
                         <input type="text" class="form-control" placeholder="Название статьи" name="name">
                     </div>
-                    <div class="form-group col-md-4 {{ (errorAddArticle['CodeError'] == '2') ? 'has-error' }}">
+                    <div class="form-group col-md-4 js-author">
                         <label>Автор статьи</label>
                         <input type="text" class="form-control" placeholder="Автор статьи" name="author" value="Перескоков Юрий">
                     </div>
 
-                    <div class="form-group col-md-12" {{ (errorAddArticle['CodeError'] == '3') ? "style='outline: 1px solid #A90006'" }} >
+                    <!--<div class="form-group col-md-12 js-image">-->
+                        <!--<label>Хочу добавить картинку!</label>-->
+                        <!--<input type="file" name="newArticleImage[]" multiple="multiple">-->
+                    <!--</div>-->
 
-                    {% if errorAddArticle['CodeError'] != 0 %}
-                    <label for="exampleInputFile">Текущая картинка: {{ errorAddArticle['Article'].getPathImage() }} </label>
-                    <p><label for="exampleInputFile">Добавьте её снова!</label></p>
-                    {% endif %}
+                    <div class="form-group col-md-12 js-text">
+                        <label>Текст статьи: </label>
+                        <textarea id="newArticle" class="form-control" rows="6" name="text" style="resize: none"></textarea>
+                    </div>
 
-                    <label for="exampleInputFile">Хочу добавить картинку!</label>
-                    <input type="file" name="newArticleImage[]" multiple="multiple">
-                </div>
-
-                <div class="form-group col-md-12 {{ (errorAddArticle['CodeError'] == '4') ? 'has-error' }}">
-                    <label>Текст статьи: </label>
-                    <textarea id="newArticle" class="form-control" rows="6" name="text" style="resize: none"></textarea>
-                </div>
-
-                <div class="form-group">
-                    <button id="ForSub" type="submit" class="btn btn-primary" name="sub"><i class="fa fa-check"></i>Отправить</button>
-                </div>
-            </form>
+                    <div class="form-group">
+                        <button id="ForSub" type="submit" class="btn btn-primary" name="sub"><i class="fa fa-check"></i>Отправить</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-</div>
 </div>
